# hifive1-protector

./: .gitignore  Cargo.toml  README.md  bootloader-hifive1-revb.x  bootloader-hifive1.x  bootloader-link.x  build.rs
.cargo/: config
src/: main.rs
